# kuka_experimental

applications_aerotech/: CMakeLists.txt  package.xml
applications_aerotech/config/: bridge_params.yaml
applications_aerotech/launch/: kr16_aerotech.launch
applications_aerotech/script/: joint_ctrl.py  node_read_joint_states.py  rtb_kuka_kr16.py  simple_action_client_aero.py  simple_action_server_aero.py
applications_aerotech/src/: joint_ctrl.cpp
kuka_kr16_support/launch/: load_kr16_2.launch
kuka_kr16_support/meshes/kr16_2/collision/: double_tool.stl
kuka_kr16_support/meshes/kr16_2/visual/: double_tool.dae
kuka_kr16_support/urdf/: kr16_2_macro.xacro  kr16_2_with_tool.xacro  kr16_2_with_tool_macro.xacro
kuka_rsi_hw_interface/: CMakeLists.txt  package.xml
kuka_rsi_hw_interface/include/kuka_rsi_hw_interface/: kuka_hardware_interface.h  rsi_state.h  udp_server.h
kuka_rsi_hw_interface/krl/KR_C2/: ros_rsi.src  ros_rsi_ethernet.xml
kuka_rsi_hw_interface/src/: kuka_hardware_interface.cpp  kuka_hardware_interface_node.cpp
kuka_rsi_hw_interface/test/: test_hardware_interface.launch  test_params.yaml  test_tool.launch
